# nexode

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  HANDOFF.md  ISSUES.md  PLAN_NOW.md  README.md  ROADMAP.md
.agents/: CODEX-SPRINT-0.md  CODEX-SPRINT-1.md  CODEX-SPRINT-2.md  openai.md  openclaw.md  perplexity.md
.agents/prompts/: codex-verify.md  sprint-1-codex.md  sprint-11-codex.md  sprint-2-codex.md  sprint-3-codex.md  sprint-4-codex.md  sprint-5-codex.md  sprint-6-codex.md  sprint-7-codex.md  sprint-8-codex.md  sprint-9-codex.md
crates/nexode-ctl/: Cargo.toml
crates/nexode-ctl/src/: main.rs
crates/nexode-daemon/: Cargo.toml
crates/nexode-daemon/src/: accounting.rs  context.rs  engine.rs  git.rs  harness.rs  lib.rs  main.rs  observer.rs  process.rs  recovery.rs  session.rs  transport.rs  wal.rs
crates/nexode-daemon/src/engine/: commands.rs  config.rs  events.rs  merge.rs  mod.rs  runtime.rs  slots.rs  test_support.rs  tests.rs
crates/nexode-daemon/tests/: live_harness.rs
crates/nexode-proto/: Cargo.toml  build.rs
crates/nexode-proto/proto/: hypervisor.proto
crates/nexode-proto/src/: lib.rs
crates/nexode-tui/: Cargo.toml
crates/nexode-tui/src/: events.rs  input.rs  lib.rs  main.rs  state.rs  ui.rs
docs/agent_guides/: decomposition-workflow-v2.md  handoff_protocol.md  onboarding.md
docs/architecture/: agent-harness.md  command-ack.md  kanban-state-machine.md  multiplexed-workspaces.md  observer-design.md  wal-recovery.md
docs/reviews/: codex-verify-review.md  sprint-1-review.md  sprint-10a-review.md  sprint-10b-review.md  sprint-10c-review.md  sprint-2-review.md  sprint-3-review.md  sprint-4-review.md  sprint-5-review.md  sprint-6-review.md  sprint-7-review.md  sprint-8-review.md  sprint-9-review.md
docs/spec/: Canonical Source and Precedence Policy d013_proposal.md  agents.md  deferred.md  master-spec.md  requirements-extracted.md  spec-outline.md
extensions/nexode-vscode/: .vscodeignore  esbuild.mjs  package-lock.json  package.json  tsconfig.json
extensions/nexode-vscode/proto/: hypervisor.proto
extensions/nexode-vscode/src/: commands.ts  daemon-client.ts  decoration-provider.ts  diagnostic-manager.ts  diagnostic-parser.ts  extension.ts  kanban-commands.ts  kanban-panel.ts  merge-tree.ts  output-channel-manager.ts  slot-tree-provider.ts  state.ts  status-bar.ts  synapse-grid-panel.ts  view-models.ts  webview-support.ts  (+1 more)
scripts/: demo.sh
(+15 files in other folders)
