[package]
name = "nexode-daemon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
live-test = []

[dependencies]
bincode = "1.3.3"
clap = { version = "4.6.0", features = ["derive"] }
crc32fast = "1.5.0"
glob = "0.3.3"
nexode-proto = { path = "../nexode-proto" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.50.0", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net", "sync"] }
tonic = { version = "0.14.5", features = ["transport"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
wait-timeout = "0.2.1"

[dev-dependencies]
nexode-tui = { path = "../nexode-tui" }
serial_test = "3.2.0"
tempfile = "3.23.0"
